# playground

./: makefile  read_by_range.py  test_doctest_w_spark.py
binary_tree/: binary_tree.py  inorder_traversal.py
cpp/: a.out  calculate  calculate.cpp  hello.cpp  miffy_say  miffy_say.cpp
history/: 20241113005140.py  20241113005141.py  20241113005143.py  20241113005146.py  20241113005149.py  20241113005201.py  20241113005203.py  20241113005206.py  20241113005208.py  20241113005209.py  20241113005210.py  20241113005212.py  20241113005213.py  20241113005214.py  20241113005216.py  20241113005219.py  20241113005220.py  20241113005222.py  20241113005223.py  20241113005225.py  20241113005226.py  20241113005228.py  20241113005230.py  20241113005231.py  20241113005233.py  20241113005235.py  20241113005236.py  20241113005238.py  20241113005241.py  20241113005325.py  20241113005326.py  20241113005328.py  20241113005331.py  20241113005332.py  20241113005334.py  20241113005354.py  20241113005356.py  20241113005358.py  20241113005435.py  20241113005436.py  (+15 more)
ipynb_to_py/: Makefile
ipynb_to_py/tests/: test_greet.py
langchain-getting-started/: pyproject.toml
langchain-getting-started/langchain_getting_started/: main.py
nb2py/: 01_01_greet.ipynb  Makefile
nb2py/tests/: test_greet 2.py
neural-network/: pyproject.toml
openai-exec/: pyproject.toml
openai-exec/openai_exec/: exec.py  main.py
openai-exec/openai_exec/history/: 20241113005033.py  20241113005035.py  (+38 more)
recursion/node/: factorial.js
recursion/recursive/: date_list.py
recursive/: pyproject.toml
rust/src/: main.rs
